# AviSynth_masktools

./: .gitignore  CMakeLists.txt  README.md  masktools.sln
avs2x/: clip.h  filter.h  params.h
common/: CMakeLists.txt  Files.cmake
common/clip/: clip.h
common/constraints/: constraints.h
common/frame/: frame.h
common/functions/: functions.cpp  functions.h  functions_cuda.cu
common/params/: params.h
common/parser/: parser.cpp  parser.h  symbol.cpp  symbol.h
common/plane/: plane.h
common/utils/: utils.h
common_cuda/: readme_copyhere.txt
include/: avisynth.h
masktools/: CMakeLists.txt  Files.cmake
masktools/avs2x/: wrapper.cpp
masktools/avsheaders/: avisynth.h
masktools/common/: 16bit.h  common.h  mt_resource.aps  mt_resource.rc  simd.h  simd_avx.h  simd_avx2.h
masktools/common/base/: filter.h
masktools/common/clip/: inputconfig.cpp  inputconfig.h
masktools/common/params/: params.h
masktools/filters/binarize/: binarize.h  binarize16.cpp  binarize16.h  binarize32.cpp  binarize_avx2.cpp
masktools/filters/blur/: mappedblur.h  mappedblur16.cpp  mappedblur32.cpp
masktools/filters/convolution/: convolution.cpp  convolution.h
masktools/filters/gradient/: gradient.cpp  gradient.h
masktools/filters/invert/: invert.cpp  invert.h
masktools/filters/logic/: logic.cpp  logic.h  logic16.cpp  logic16.h  logic16_avx2.cpp  logic32.cpp  logic32_avx.cpp  logic_avx2.cpp
masktools/filters/lut/: functions.h  lut_data.cpp  lut_data.h  lut_kernel.cu  lut_kernel.h
masktools/filters/lut/lut/: lut.cpp  lut.h  lut16.cpp
masktools/filters/lut/lut16/: lut16.cpp  lut16.h
masktools/filters/lut/lutf/: lutf.cpp  lutf.h
masktools/filters/lut/luts/: luts.cpp  luts.h
masktools/filters/lut/lutspa/: lutspa.h
masktools/filters/lut/lutsx/: lutsx.cpp  lutsx.h
masktools/filters/lut/lutxy/: lutxy.cpp  lutxy.h
masktools/filters/lut/lutxyz/: lutxyz.cpp  lutxyz.h
masktools/filters/lut/lutxyza/: lutxyza.cpp  lutxyza.h
masktools/filters/mask/: functions16.h  functions16_avx2.h  functions32.h  functions32_avx.h  functions_avx2.h
masktools/filters/mask/edge/: edgemask.h  edgemask16.cpp  edgemask16_avx2.cpp  edgemask32.cpp  edgemask32_avx.cpp  edgemask_avx2.cpp
masktools/filters/mask/hysteresis/: hysteresis.cpp  hysteresis.h
masktools/filters/mask/motion/: motionmask.cpp  motionmask.h  motionmask16.cpp  motionmask32.cpp
masktools/filters/merge/: merge.cpp  merge.h  merge16.cpp  merge16.h  merge16_avx2.cpp  merge32.cpp  merge32_avx.cpp  merge32_avx2.cpp  merge_avx2.cpp
masktools/filters/morphologic/: functions.h  functions16.h  functions16_avx2.h  functions32.h  morphologic.h  morphologic16.h
masktools/filters/morphologic/deflate/: deflate.h  deflate16.cpp  deflate16.h  deflate32.cpp
masktools/filters/morphologic/expand/: expand.cpp  expand.h  expand16.cpp  expand16.h  expand16_avx2.cpp  expand32.cpp
masktools/filters/morphologic/inflate/: inflate.h  inflate16.cpp  inflate16.h  inflate32.cpp
masktools/filters/morphologic/inpand/: inpand.cpp  inpand.h  inpand16.cpp  inpand16.h  inpand16_avx2.cpp  inpand32.cpp
masktools/filters/support/adddiff/: adddiff.cpp  adddiff.h
masktools/filters/support/adddiff16/: adddiff16.cpp  adddiff16.h
masktools/filters/support/average/: average.cpp  average.h
masktools/filters/support/average16/: average16.cpp  average16.h
masktools/filters/support/clamp/: clamp.cpp  clamp.h
masktools/filters/support/clamp16/: clamp16.cpp  clamp16.h
masktools/filters/support/makediff/: makediff.cpp  makediff.h
masktools/filters/support/makediff16/: makediff16.cpp  makediff16.h
masktools/helpers/: CudaHelper.cpp
masktools/helpers/avs2x/: helpers_avs2x.cpp
masktools/helpers/forms/: forms.cpp
masktools/helpers/parser/: spirit.cpp
